--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #eee;
+    background-color: #ddd;
     margin-top: 0%;
     margin-bottom: 0%;
     margin-left: 25%;
